--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <?php
 require_once('includes/init.php');
 
@@ -180,3 +183,9 @@ require_once('template/footer.php');
 	header('Location: login.php');
 }
 ?>
+</head>
+
+<body>
+    
+</body>
+</html>
